--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5"
+    "pg": "^8.11.3"
   }
 }
